--- a/testes/3-example.yaml
+++ b/testes/3-example.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: 1-example
+  name: 3-example
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echoserver
-  namespace: 1-example
+  namespace: 3-example
 spec:
   selector:
     matchLabels:
       app: echoserver
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -29,7 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echoserver
-  namespace: 1-example
+  namespace: 3-example
 spec:
   ports:
   - port: 80
@@ -43,14 +43,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echoserver
-  namespace: 1-example
+  namespace: 3-example
   annotations:
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:284551195402:certificate/1781d7b3-e2b4-4db7-828f-d591b0fe3593
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
 spec:
   ingressClassName: alb
   rules:
-    - host: echo.martorano.dev #endereço q criei no no-ip e coloquei o alb como cname.
+    - host: secure-echo.martorano.dev
       http:
         paths:
           - path: /
