--- a/testes/4-example.yaml
+++ b/testes/4-example.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: 1-example
+  name: 4-example
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echoserver
-  namespace: 1-example
+  namespace: 4-example
 spec:
   selector:
     matchLabels:
       app: echoserver
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -29,13 +29,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echoserver
-  namespace: 1-example
+  namespace: 4-example
 spec:
   ports:
-  - port: 80
-    targetPort: 8080
+  - port: 8080
     protocol: TCP
-  type: NodePort
+  type: ClusterIP
   selector:
     app: echoserver
 ---
@@ -43,14 +42,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echoserver
-  namespace: 1-example
+  namespace: 4-example
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
+    alb.ingress.kubernetes.io/target-type: ip
 spec:
   ingressClassName: alb
   rules:
-    - host: echo.martorano.dev #endereço q criei no no-ip e coloquei o alb como cname.
+    - host: teste.devopsmartorano.com
       http:
         paths:
           - path: /
@@ -59,4 +58,4 @@ spec:
               service:
                 name: echoserver
                 port:
-                  number: 80
+                  number: 8080
