roles e policies do external dns

--- a/testes/1-exemple.yaml
+++ b/testes/1-exemple.yaml
@@ -46,7 +46,7 @@ metadata:
   namespace: 1-example
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
+    #alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
 spec:
   ingressClassName: alb
   rules:
