--- a/testes/4-example.yaml
+++ b/testes/4-example.yaml
@@ -44,10 +44,20 @@ metadata:
   name: echoserver
   namespace: 4-example
   annotations:
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:284551195402:certificate/882c4eb4-f58c-4390-99f5-859c12dd4678
+    alb.ingress.kubernetes.io/group.name: martorano-public
+    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
+      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+    alb.ingress.kubernetes.io/success-codes: 200-399
     alb.ingress.kubernetes.io/target-type: ip
+    kubernetes.io/ingress.class: alb
 spec:
-  ingressClassName: alb
+  
   rules:
     - host: api.martorano.dev
       http:
